# quant-data

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  config.example.toml  pyproject.toml  qd_config.example.toml
quant_data/: __init__.py  api.py  cli.py  config.py  downloader.py  models.py  service.py  skill_install.py  storage.py  utils.py
skills/quant-data/: SKILL.md
skills/quant-data/agents/: openai.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_service.py  test_skill_install.py  test_storage.py
